feat: add basic page & style

--- a/index.html
+++ b/index.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="Aliaksei Mikhaleu CV, Алексей Михалев резюме">
+    <link rel="stylesheet" href="style.css">
+    <title>Aliaksei Mikhaleu CV</title>
   </head>
   <body>
+    <img src="foto.jpg" alt="my face">
+    <header>
+      <h1>Aliaksei Mikhaleu</h1>
+    </header>
+    <h3>Contact</h3>
+    <p>+375 (29) 572-38-67 (+ viber & telegram)</p>
+    <p><a href="mikhaleu.aliaksei@gmail.com">mikhaleu.aliaksei@gmail.com</a></p>
+    <h3>Summary</h3>
+    <ul>
+      <li>>5+ years of experience in organizing production, setting up processes, managing and management in other areas</li>
+      <li>Sociable and communicative</li>
+      <li>Good work in a team</li>
+      <li>Fast-learner, self-organized, highly-motivated</li>
+      <li>Socially active, with an active lifestyle</li>
+      <li>Founder, Motorclub of students of the Belarusian National Technical University</li>
+      <li>Member, Belarusian Public Organization of the Greeks 'Peloponnese'</li>
+      <li>Hobbies: technical sports, sports tourism, reading</li>
+    </ul>
+    <h3>Skills</h3>
+      <ul>
+      <li>Atlassian Jira, Confluence</li>
+      <li>MS Teams</li>
+      <li>Trello</li>
+      <li>Miro (RealtimeBoard)</li>
+      <li>Notion</li>
+      <li>1C</li>
+      <li>Slack</li>
+      <li>Google Docs, Sheets, Slides, Forms and Hangouts</li>
+      <li>Yandex Tracker</li>
+      </ul>
+    <h3>Code examples</h3>
+      <p>Still empty :(</p>
+    <h3>Experience</h3>
+      <ul>  
+      <li><b>Project Manager trainee</b>, team: 3 UI/UX-designers, 3 developers, DesignSpot School (EPAM), Jun 2019 - Aug 2019: Project & product management from idea to PoC: stakeholder issues identified, UXresearch, interviews with KA, prototyping, usability testing complited; functional and nonfunctional requirements determined; development to the PoC stage was carried out in a separate stream. Management and tools: Agile, Scrum, Trello, MS Teams. Technology stack: Figma, Miro, Google Cloud Platform, Cloud Storage, Cloud SQL, Speech-to-Text, App Engine, Java, Springboot, Thymeleaf, Bootstrap, JQuery.</li>
+      <li><b>Project Manager trainee</b>, team: 2 BA/UX-designers, IT-academy BelHard, Mar 2019 - Jun 2019: Business platform for investors for sourcing and funding high-growth ventures and sturtups with mobile app. Customer development, prototyping,business planning, hypothesis testing. Problems identified, compiled business model, conducted polles, created clickable prototype. Management and tools: Agile, Scrum, Trello. Technology stack: Figma, InVision, Miro, Google Docs, Sheets, Slides, Forms and Hangouts, Slack</li>
+      <li><b>Project Manager/BA</b>, team: 1 developer, 2 designers, Independent Project, Jun 2018 - till now: Platform for management and accounting for the car repair shop and spare parts shop. It is developing by enthusiasts in their free time. Management and tools: Agile, Canban based on user stories map, Atlassian confluence, Notion, Google Docs. Technology stack: Figma, Sketch, Miro, mySQL, CSS, Html, ReactJS</li>
+      <li>Other experience in various organizations, 2010 - till now</li>
+      </ul>
+    <h3>Education</h3>
+      <li><b>Degree in Mechanical Engineering</b>, speciality 'Autoservice', <a href="http://www.bntu.by/">Belarusian National Technical University</a>, 2013</li>
+      <li><b>Degree in management and economics</b>, speciality 'Business Administration', <a href="http://www.sbmt.bsu.by/">School of Business of Belarusian State University</a>, 2020</li>
+      <li><b>Social Psychology</b>, <a href="https://www.eshko.by/">European School for Correspondence Courses</a>, 2008</li>
+      <li><b>Baltic sustainable development strategy</b>, <a href="http://www.uu.se/">Uppsala University</a>, 2009</li>
+      <li><b>English</b>, tutor and <a href="https://freeschool.by/">FREESCHOOL</a>, till now</li>
+    <h3>English</h3>
+      <p>Pre-Intermediate, raising its level to Upper-Intermediate is primary task</p>
   </body>
 </html>
